Major update: Complete dashboard system with activities, reports, notifications, and settings pages. Enhanced UI/UX, fixed security issues, and integrated DeepSeek V3 AI.

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,4 @@ logs
 # Chrome extension files with credentials (local development only)
 /chrome-extension/config.js
 /chrome-extension/manifest.json
+chrome-extension/config.js
